it is the begin

--- a/public/login.html
+++ b/public/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="login">
+<html id="auth">
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +9,11 @@
     <script type="text/javascript" src="js/dev/holder.min.js"></script>
 </head>
 <body>
-    <div class="center-block">123</div>
+<main class="auth-main">
+    <div class="auth-block">
+        <h1>Sign in to Hope Admin</h1>
+        <a href="reg.html" class="auth-link">New to Hope Admin? Sign up!</a>
+    </div>
+</main>
 </body>
 </html>
