--- a/public/404.html
+++ b/public/404.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html id="auth">
+<html id="page-404">
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>esi</title>
+    <title>404</title>
     <link href="css/basic.css" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="js/basic.browserify.js"></script>
     <script type="text/javascript" src="js/dev/holder.min.js"></script>
 </head>
 <body>
-<main class="auth-main">
-    <div class="auth-block">
-        <h1>Sign in to Hope Admin</h1>
-        <a href="reg.html" class="auth-link">New to Hope Admin? Sign up!</a>
-    </div>
-</main>
+<div class="page-not-found-modal">
+    <h1>404 Error</h1>
+    <p>Sorry, that page doesn't exist. <a href="/">Go to Home Page.</a></p>
+</div>
 </body>
 </html>
