it is the begin

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,45 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>esi</title>
+    <title>dash board</title>
     <link href="css/basic.css" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="js/basic.browserify.js"></script>
     <script type="text/javascript" src="js/dev/holder.min.js"></script>
 </head>
-<body id="index">
-test
+<body>
+<main>
+    <div class="page-top clearfix">
+        <a href="#" class="al-logo clearfix">
+            <span>Hope</span>Admin
+        </a>
+        <a href="" class="collapse-menu-link"></a>
+
+        <div class="search">
+            <i class="ion-ios-search-strong"></i>
+            <input id="searchInput" type="text" placeholder="Search for..."/>
+        </div>
+        <div class="user-profile clearfix">
+            <div class="al-user-profile dropdown">
+                <a class="profile-toggle-link dropdown-toggle">
+                    <img src="assets/images/profile/Nasta.png">
+                </a>
+            </div>
+            <ul class="al-msg-center clearfix">
+                <li class="dropdown">
+                    <a href="" class="dropdown-toggle"><i class="fa fa-bell-o"></i><span>5</span>
+                        <div class="notification-ring"></div>
+                    </a>
+                </li>
+                <li class="dropdown">
+                    <a href="" class="msg dropdown-toggle"><i class="fa fa-envelope-o"></i><span>15</span>
+                        <div class="notification-ring"></div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="questions-section">Have questions? <a href="mailto:service@hhdd.com">service@hhdd.com</a>
+        </div>
+    </div>
+</main>
 </body>
 </html>
