it is the begin

--- a/public/404.html
+++ b/public/404.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>404</title>
     <link href="css/basic.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="js/basic.browserify.js"></script>
+    <script type="text/javascript" src="js/basic.js"></script>
     <script type="text/javascript" src="js/dev/holder.min.js"></script>
 </head>
 <body>
 <div class="page-not-found-modal">
     <h1>404 Error</h1>
     <p>Sorry, that page doesn't exist. <a href="/">Go to Home Page.</a></p>
+    <span class="name1"></span>
 </div>
 </body>
 </html>
