--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>dash board</title>
     <link href="css/basic.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="js/basic.browserify.js"></script>
+    <script type="text/javascript" src="js/basic.js"></script>
     <script type="text/javascript" src="js/dev/holder.min.js"></script>
 </head>
 <body>
