--- a/public/404.html
+++ b/public/404.html
@@ -6,13 +6,14 @@
     <title>404</title>
     <link href="css/basic.css" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="js/basic.js"></script>
+    <script type="text/javascript" src="js/module/auth.js"></script>
     <script type="text/javascript" src="js/dev/holder.min.js"></script>
 </head>
 <body>
 <div class="page-not-found-modal">
     <h1>404 Error</h1>
     <p>Sorry, that page doesn't exist. <a href="/">Go to Home Page.</a></p>
-    <span class="name1"></span>
+    <div id="containerTest"></div>
 </div>
 </body>
 </html>
