it is the begin

--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
     <title>404</title>
     <link href="css/basic.css" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="js/basic.js"></script>
-    <script type="text/javascript" src="js/module/auth.js"></script>
+    <script type="text/javascript" src="js/react/module/auth.js"></script>
     <script type="text/javascript" src="js/dev/holder.min.js"></script>
 </head>
 <body>
