it is the begin

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -5,10 +5,9 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/vendor.css" />
     <script src="js/vendor.js"></script>
-    <script src="js/modules/auth.js"></script>
+    <script src="js/modules/dashBoard.js"></script>
 </head>
 <body>
-<div id="containerTest"></div>
-
+    <main></main>
 </body>
 </html>
