--- a/workspace/html/reg.html
+++ b/workspace/html/reg.html
@@ -4,48 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>reg</title>
-    <link href="css/basic.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="js/basic.js"></script>
-    <script type="text/javascript" src="js/dev/holder.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/vendor.css" />
+    <script src="../js/vendor.js"></script>
+    <script src="../js/modules/reg.js"></script>
 </head>
 <body>
 <main class="auth-main">
-    <div class="auth-block">
-        <h1>Sign up to Hope Admin</h1>
-        <a href="auth.html" class="auth-link">Already have a Hope Admin account? Sign in!</a>
 
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label for="input-name" class="col-sm-2 control-label">Name</label>
-                <div class="col-sm-10"><input type="email" class="form-control" id="input-name" placeholder="Full Name">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="input-email" class="col-sm-2 control-label">Email</label>
-
-                <div class="col-sm-10"><input type="email" class="form-control" id="input-email" placeholder="Email">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="input-password" class="col-sm-2 control-label">Password</label>
-
-                <div class="col-sm-10"><input type="password" class="form-control" id="input-password" placeholder="Password">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="a btn btn-primary btn-auth">Sign up</button>
-                </div>
-            </div>
-        </form>
-        <div class="auth-sep"><span><span>or Sign in with one click</span></span></div>
-        <div class="al-share-auth">
-            <ul class="al-share clearfix">
-                <li><i class="a socicon socicon-wechat" title="Share on wechat"></i></li>
-                <li><i class="a socicon socicon-weibo" title="Share on weibo"></i></li>
-            </ul>
-        </div>
-    </div>
 </main>
 </body>
 </html>
