it is the begin

--- a/workspace/html/404.html
+++ b/workspace/html/404.html
@@ -9,7 +9,7 @@
     <script src="../js/modules/404.js"></script>
 </head>
 <body>
-<div id="error-404" class="page-not-found-modal">
+<div class="page-not-found-modal">
 </div>
 </body>
 </html>
