--- a/workspace/index.html
+++ b/workspace/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/vendor.css" />
     <script src="js/vendor.js"></script>
-    <script src="js/modules/dashBoard.js"></script>
+    <script src="js/modules/index.js"></script>
 </head>
 <body>
     <main></main>
