--- a/workspace/index.html
+++ b/workspace/index.html
@@ -8,6 +8,6 @@
     <script src="js/modules/index.js"></script>
 </head>
 <body>
-    <main></main>
+    <div id="entirety"></div>
 </body>
 </html>
