it is the begin

--- a/workspace/html/404.html
+++ b/workspace/html/404.html
@@ -6,10 +6,12 @@
     <title>404</title>
     <link rel="stylesheet" type="text/css" href="../css/vendor.css" />
     <script src="../js/vendor.js"></script>
-    <script src="../js/modules/404.js"></script>
+    <script src="../js/tools.js"></script>
+    <script src="../js/common-components.js"></script>
 </head>
 <body>
 <div class="page-not-found-modal">
 </div>
+<script src="../js/modules/404.js"></script>
 </body>
 </html>
