--- a/workspace/html/reg.html
+++ b/workspace/html/reg.html
@@ -6,11 +6,12 @@
     <title>reg</title>
     <link rel="stylesheet" type="text/css" href="../css/vendor.css" />
     <script src="../js/vendor.js"></script>
-    <script src="../js/modules/reg.js"></script>
+    <script src="../js/tools.js"></script>
+    <script src="../js/common-components.js"></script>
 </head>
 <body>
 <main class="auth-main">
-
 </main>
+<script src="../js/modules/reg.js"></script>
 </body>
 </html>
