--- a/workspace/index.html
+++ b/workspace/index.html
@@ -5,7 +5,8 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/vendor.css"/>
     <script src="js/vendor.js"></script>
-
+    <script src="js/tools.js"></script>
+    <script src="js/common-components.js"></script>
 </head>
 <body>
     <div id="entirety"></div>
