--- a/workspace/index.html
+++ b/workspace/index.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>DashBoard</title>
     <link rel="stylesheet" type="text/css" href="css/vendor.css"/>
     <script src="js/vendor.js"></script>
     <script src="js/tools.js"></script>
